arreglo de src img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- esta es la tarjeta de selección -->
             <div class="card">
-                <img src="/assets/img/rojos.webp" alt="" class="rojos">
+                <img src="assets/img/rojos.webp" alt="" class="rojos">
                 <h2 class="title">Audífonos SONY ZX</h2>
                 <div class="options">
                     <label for="quantity">Cantidad:</label>
